--- a/css project/iSTUDIO.HTML
+++ b/css project/iSTUDIO.HTML
@@ -329,7 +329,7 @@
     </form> 
     </div>
 </div> 
- <footer id="contact">
+ <!-- <footer id="contact">
     <div class="footer-content">
       <h3>iSTUDIO</h3>
       <p>Creative interior design solutions for modern living.</p>
@@ -341,23 +341,46 @@
       </div>
       <p class="copy">© 2025 iSTUDIO. All Rights Reserved.</p>
     </div>
+  </footer> -->
+  <footer id="contact">
+    <div class="footer-content">
+        <h2>iSTUDIO</h2>
+        <p>Tempor erat elitr rebum at clita.
+        Diam <br> dolor diam ipsum et tempor sit.
+        Aliqu <br>diam amet diam et eos labore.
+        Clita <br>erat ipsum et lorem et sit,
+        sed stet no <br>labore lorem sit.
+        Sanctus clita duo<br> justo et tempor<br>
+    </div>
+    <div class="footer-content1">
+        <h2>Get in Touch</h2>
+        <p> Street, New York, USA</p>
+         <p>+012 345 67890</p>
+         <p>info@example.com</p>
+         <p><img src="./image/communication.png" width="30px">
+                        <img src="./image/twitter.png" width="30px">
+                        <img src="./image/instagram.png" width="30px">
+                        <img src="./image/linkedin.png" width="30px"></p>
+
+    </div>
+    <div class="footer-content2">
+         <h2>Popular link</h2>
+         <p>About Us</p>
+         <p>Contact Us</p>
+         <p>Privacy POlicy</p>
+         <p>Terms&condition</p>
+         <p>Career</p>
+    </div>
+    <div class="footer-content3">
+        <h2>Our Services</h2>
+        <p>interior Design</p>
+        <p>project planning</p>
+        <p>Renovation</p>
+        <p>Implement</p>
+        <p>Landscop Design</p>
+    </div>
+    
   </footer>
-
-
-
-
-
-  
-
-
-
-
-
-
-
-
-
-
 </body>
 
 </html>
