--- a/css project/iSTUDIO.HTML
+++ b/css project/iSTUDIO.HTML
@@ -9,27 +9,35 @@
 </head>
 
 <body>
-    <div class="nav">
-        <div class="logo">iSTUDIO</div>
-        <div class="nav1">
-            <a href="#home">HOME</a>
-            <a href="#about">ABOUT</a>
-            <a href="#services">SERVICES</a>
-            <a href="#projects">PROJECTS</a>
+  <div class="nav">
+  <div class="logo">iSTUDIO</div>
 
-            <div class="navbar2">
-                <a href="#">PAGES ▼</a>
-                <div class="navbar3">
-                    <a href="#features">FEATURES</a>
-                    <a href="#our-team">OUR TEAM</a>
-                    <a href="#testimonial">TESTIMONIAL</a>
-                    <a href="#404">404 PAGE</a>
-                </div>
-            </div>
+  <input type="checkbox" id="menu-toggle" class="menu-toggle">
+  <label for="menu-toggle" class="hamburger">☰</label>
 
-            <a href="#contacts">CONTACTS</a>
-        </div>
+  <div class="nav1">
+    <a href="#home">HOME</a>
+    <a href="#about">ABOUT</a>
+    <a href="#services">SERVICES</a>
+    <a href="#projects">PROJECTS</a>
+
+    <div class="navbar2">
+      <input type="checkbox" id="pages-toggle" class="submenu-toggle">
+      <label for="pages-toggle" class="submenu-label">PAGES ▼</label>
+      <div class="navbar3">
+        <a href="#features">FEATURES</a>
+        <a href="#our-team">OUR TEAM</a>
+        <a href="#testimonial">TESTIMONIAL</a>
+        <a href="#404">404 PAGE</a>
+      </div>
     </div>
+
+    <a href="#contacts">CONTACTS</a>
+  </div>
+</div>
+
+
+
     <!-- home page1 -->
     <div class="home" id="home">
         <div class="home1">
@@ -107,6 +115,9 @@
         </div>
     </div>
     <!-- page3 about2page -->
+
+
+    
 
 
     <div class="cards" id="features">
