--- a/js/day1/day7.html
+++ b/js/day1/day7.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>
-        console.log("i am 23 years old")
-    </script>
-      <script src="day1.js" type="text/javascript"></script>
+    <script src="day7.js"></script>
 </head>
 <body>
-    <script>
-        document.write("my name is aneela")
-    </script>
     
 </body>
 </html>
