--- a/js/mini.html
+++ b/js/mini.html
@@ -10,6 +10,10 @@
 <body>
     <div class="container">
         <div class="clock">
+            <div  style="--clr: brown; --h:72px;" id="hour" class="hand"><i></i></div>
+            <div  style="--clr: blue; --m:84px;"id="min" class="hand"><i></i></div>
+            <div  style="--clr: bisque; --h:94px;": id="sec" class="hand"><i></i></div>
+
             <span style="--i:1;"><b>1</b></span>
             <span style="--i:2;"><b>2</b></span>
             <span style="--i:3;"><b>3</b></span>
@@ -26,5 +30,6 @@
 
         </div>
     </div>
+    <script src="./mini.js"></script>
 </body>
 </html>
